--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="about">A &amp; N\nDeveloper</string>
+    <string name="about">AN\nDeveloper</string>
 
     <string name="action_settings">Settings</string>
     <string name="Interstitial_ads">ca-app-pub-5496466424105479/3041618947</string>
